--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <div class="title-buttons">
                 <div class="title-button">_</div>
                 <div class="title-button">□</div>
-                <div class="title-button">×</div>
+                <div class="title-button return-button" onclick="window.history.back()">←</div>
             </div>
         </div>
 
@@ -36,7 +36,7 @@
             <div class="about-text">
                 <h1>About</h1>
                 <p>
-                    Hi, my name is Hardy Amuntai or (Chinese name). I'm a computer science graduate from Tamkang University, Taipei. With a specialty towards UI/UX design, front-end developer and Java. I'm passionate about games, art and music. I've had plenty of experience working with other people with a variety of projects from making a fully functioning website to a Machine learning Model. I also have a hobby of drawing that led me into pixel art.
+                    Hi, my name is Hardy Amuntai. I'm a computer science graduate from Tamkang University, Taipei. With a specialty towards UI/UX design, front-end developer and Java. I'm passionate about games, art and music. I've had plenty of experience working with other people with a variety of projects from making a fully functioning website to a Machine learning Model. I also have a hobby of drawing that led me into pixel art.
                 </p>
             </div>
         </div>
@@ -44,13 +44,6 @@
         <div class="status-bar">
             <div class="status-item">Ready</div>
             <div class="status-item">Portfolio v1.0</div>
-        </div>
-        <div class="taskbar">
-            <button class="start-button">
-                <span class="start-icon">🪟</span>
-                Start
-            </button>
-            <div class="taskbar-clock" id="clock">12:00 PM</div>
         </div>
     </div>
 </body>
