--- a/about.html
+++ b/about.html
@@ -45,6 +45,14 @@
             <div class="status-item">Ready</div>
             <div class="status-item">Portfolio v1.0</div>
         </div>
+        <div class="taskbar">
+            <button class="start-button">
+                <span class="start-icon">🪟</span>
+                Start
+            </button>
+            <div class="taskbar-clock" id="clock">12:00 PM</div>
+        </div>
     </div>
+    <script src="js/clock_script.js"></script>
 </body>
 </html>
