--- a/projects.html
+++ b/projects.html
@@ -90,6 +90,14 @@
             <div class="status-item">Ready</div>
             <div class="status-item">3 Projects Loaded</div>
         </div>
+        <div class="taskbar">
+            <button class="start-button">
+                <span class="start-icon">🪟</span>
+                Start
+            </button>
+            <div class="taskbar-clock" id="clock">12:00 PM</div>
+        </div>
     </div>
+    <script src="../js/clock_script.js"></script>
 </body>
 </html>
