--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span class="icon-label">Resume</span>
             </div>
             <div class="desktop-icon" id="arcadeStartIcon">
-        <img src="assets/start.png" alt="Start Game" class="icon-image">
+        <img src="assets/mini-arcade.png" alt="Start Game" class="icon-image">
         <span class="icon-label">Play</span>
     </div>
         </div>
