--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <span class="icon-label">Resume</span>
             </div>
             <div class="desktop-icon" id="arcadeStartIcon">
-        <img src="assets/mini-arcade.png" alt="Start Game" class="icon-image">
-        <span class="icon-label">Play</span>
-    </div>
+                <img src="assets/mini-arcade.png" alt="Start Game" class="icon-image">
+                <span class="icon-label">Play</span>
+            </div>
         </div>
 
         <!-- Introduction Window -->
@@ -254,6 +254,19 @@
             </div>
         </div>
 
+        <!-- Start Menu -->
+        <div id="startMenu" class="start-menu">
+            <div class="start-menu-header">
+                <span>🪟 Start</span>
+            </div>
+            <div class="start-menu-body">
+                <div class="start-menu-item">Desktop Background:</div>
+                <div class="color-picker">
+                    <input type="color" id="bgColorPicker" value="#63b5c0">
+                </div>
+                <div class="start-menu-item" id="applyBg">Apply Custom Color</div>
+            </div>
+        </div>
 
         <!-- Taskbar -->
         <div class="taskbar">
