updated the game

--- a/startscreen.html
+++ b/startscreen.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/start_screen_style.css">
 </head>
 <body>
+    <button id = "Back-Button" class = "Backbtn">← Back</button>
     <div id="gameContainer">
         <canvas id="canvas" width="800" height="600"></canvas>
         <div id="instructions">
