--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,9 @@
                 <h2 class="project-title">Pom-Pom Adventure</h2>
                 <div class="project-content">
                     <div class="project-description">
-                        <p>For OOP(Object Oriented Programming) project, my group and I made a game in Unity.</p>
+                        <p>For my OOP(Object Oriented Programming) class project, my group and I made a game using Java.</p>
                         <p>I helped in the game development process, and made all the assets in game, such as making sprites and the maps.</p>
-                        <p>The reason we chose to make a game, is that we had to make a functional program with animations, so instead of just making a boring calculator or something, we're making a game.</p>
+                        <p>The reason we chose to make a game, is that we had to make a functional program with animations, so instead of just making a boring calculator or something, we decided to make a game.</p>
                     </div>
                     <div class="project-images">
                         <div class="main-image">
@@ -54,9 +54,9 @@
                 <h2 class="project-title">Eternal Fantasy</h2>
                 <div class="project-content">
                     <div class="project-description">
-                        <p>For My senior project, my team and I chose to make a turn-based JRPG game which was inspired by Final Fantasy. We incorporated the use of an AI model for the enemy. I helped in making the AI design, all the sprite and game assets for the game.</p>
-                        <p>This makes it so no longer you play the game, the more accustomed the AI will be to your play style. Making the game more challenging as the time goes.</p>
-                        <p>To why my team and I decided to make a game, we wanted to further sharpen our game development skills why also implementing new mechanics like AI integration.</p>
+                            <p>For My senior project, my team and I chose to make a turn-based JRPG game which was inspired by Final Fantasy. We incorporated the use of an AI model for the enemy. I helped in making the AI design, all the sprite and game assets for the game.</p>
+                            <p>This makes it so the longer you play the game, the more accustomed the AI will be to your play style. Making the game more challenging as the time goes.</p>
+                            <p>To why my team and I decided to make a game, we wanted to further sharpen our game development skills while also implementing new mechanics like AI integration.</p>
                     </div>
                     <div class="project-images">
                         <div class="game-screenshots">
@@ -72,9 +72,9 @@
                 <h2 class="project-title">Arduino Alarm Clock</h2>
                 <div class="project-content">
                     <div class="project-description">
-                        <p>For My IoT project, I made an Arduino Alarm clock, that ran from an esp32. The circuit was equipped with humidity sensors, 4 buttons to set the time for the alarm, an lcd screen, speaker and a motion sensor.</p>
-                        <p>When equipped with more functions with a Wi-Fi, I was able to connect the board to the internet and make the clock run on normal where it is, an you read would be a good supply to power for at least a week. The alarm clock also has a feature where people have grown to dred shown their alarms and going back to sleep, my alarm clock has a motion sensor that detects after the alarm has rang, if the user has not moved, the alarm will automatically turn on again.</p>
-                        <p>The reason I chose to do this project is because, I've always been interested in circuitry and this gave me a chance to actually learn and experiment this lesson, as I took the chance to create a functional device that is actually reuseable and is really fun to play from that utilizes IoT and portable.</p>
+                            <p>For My IoT project, I made an Arduino Alarm clock, that ran from an esp32. The circuit was equipped with humidity sensors, 4 buttons to set the time for the alarm, an lcd screen, speaker and a motion sensor.</p>
+                            <p>When equipped with Wi-Fi, I was able to connect the board to the internet and make the clock run on the time based on where it is, and you would simply need a power supply to use the alarm clock, making it very portable. The alarm clock's motion sensor will detect if there is any motion after the alarm has rung, if the user has not moved; the alarm will automatically turn on again.</p>
+                            <p>The reason I chose to do this project is because I've always been interested in circuitry, and this gave me a chance to actually learn and experiment. I took the opportunity to create a functional, reusable, and fun device that utilizes IoT and portability.</p>
                     </div>
                     <div class="project-images">
                         <div class="hardware-images">
