--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,6 @@
     </style>
 </head>
 <body>
-    <embed src="assets/CV.pdf" type="application/pdf">
+    <embed src="assets/CV(2).pdf" type="application/pdf">
 </body>
 </html>
